# JoltPhysicsSharp

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  JoltPhysicsSharp.Native.targets  JoltPhysicsSharp.sln  JoltPhysicsSharp.slnx  LICENSE  README.md  build.cake  cmake_vs2022_arm64.bat  cmake_vs2022_x64.bat  cmake_vs2022_x64_double.bat  global.json
.config/: dotnet-tools.json
.github/workflows/: build.yml  build_native.yml  main.yml
native/osx/: libjoltc.dylib
samples/01-HelloWorld/: 01-HelloWorld.csproj  Program.cs
samples/Alimer.SampleFramework/: Alimer.SampleFramework.csproj  Application.cs  DisposableObject.cs
samples/HelloWorld/: HelloWorld.csproj  Program.cs  Sample.cs
samples/HelloWorld/Samples/: HelloWorld.cs
src/JoltPhysics.Native/: JoltPhysics.Native.csproj
src/JoltPhysics.Native.Debug/: JoltPhysics.Native.Debug.csproj
src/JoltPhysicsSharp/: Activation.cs  ActivationMode.cs  ActiveEdgeMode.cs  AllowedDOFs.cs  BackFaceMode.cs  Body.cs  BodyCreationSettings.cs  BodyDrawFilter.cs  BodyFilter.cs  BodyID.cs  BodyInterface.cs  BodyLockInterface.cs  BodyLockMultiRead.cs  BodyLockMultiWrite.cs  BodyLockRead.cs  BodyLockWrite.cs  BodyType.cs  Bool32.cs  Bool8.cs  BoundingBox.cs  BoundingSphere.cs  BoxShapeSettings.cs  BroadPhaseCastResult.cs  BroadPhaseLayer.cs  BroadPhaseLayerFilter.cs  BroadPhaseLayerInterface.cs  BroadPhaseLayerInterfaceMask.cs  BroadPhaseLayerInterfaceTable.cs  BroadPhaseQuery.cs  CharacterID.cs  CollectFacesMode.cs  CollidePointResult.cs  CollideShapeResult.cs  CollideShapeSettings.cs  CollisionCollectorType.cs  CollisionEstimationResult.cs  CollisionGroup.cs  CollisionGroupID.cs  CollisionSubGroupID.cs  Color.cs  (+89 more)
src/JoltPhysicsSharp.Native/: JoltPhysicsSharp.Native.csproj
src/JoltPhysicsSharp.Native/runtimes/osx-universal/native/: libjoltc.dylib
src/JoltPhysicsSharp/Character/: Character.cs  CharacterBase.cs  CharacterBaseSettings.cs  CharacterSettings.cs  CharacterVirtual.cs  CharacterVirtualSettings.cs  CharacterVsCharacterCollision.cs  ExtendedUpdateSettings.cs  GroundState.cs
src/JoltPhysicsSharp/Constraints/: ConeConstraint.cs  Constraint.cs  DistanceConstraint.cs  FixedConstraint.cs  GearConstraint.cs  HingeConstraint.cs  PointConstraint.cs  SixDOFConstraint.cs  SliderConstraint.cs  SwingTwistConstraint.cs  TwoBodyConstraint.cs
src/JoltPhysicsSharp/Shape/: BoxShape.cs  CapsuleShape.cs  CompoundShape.cs  ConvexHullShape.cs  ConvexShape.cs  CylinderShape.cs  DecoratedShape.cs  EmptyShape.cs  HeightFieldShape.cs  MeshShape.cs  MutableCompoundShape.cs  OffsetCenterOfMassShape.cs  PlaneShape.cs  RotatedTranslatedShape.cs  ScaledShape.cs  Shape.cs  SphereShape.cs  StaticCompoundShape.cs  TaperedCapsuleShape.cs  TaperedCylinderShape.cs  TriangleShape.cs
src/JoltPhysicsSharp/Skeleton/: JoltApi.cs  SkeletalAnimation.cs  SkeletonMapper.cs  SkeletonPose.cs
src/JoltPhysicsSharp/Vehicle/: MotorcycleController.cs  TrackSide.cs  TrackedVehicleController.cs  TransmissionMode.cs  VehicleAntiRollBar.cs  VehicleCollisionTester.cs  VehicleCollisionTesterCastCylinder.cs  VehicleCollisionTesterCastSphere.cs  VehicleCollisionTesterRay.cs  VehicleConstraint.cs  VehicleConstraintSettings.cs  VehicleController.cs  VehicleControllerSettings.cs  VehicleDifferentialSettings.cs  VehicleEngineSettings.cs  VehicleTrack.cs  VehicleTrackSettings.cs  VehicleTransmissionSettings.cs  Wheel.cs  WheelSettings.cs  WheelSettingsWV.cs  WheelWV.cs  WheeledVehicleController.cs  WheeledVehicleControllerSettings.cs
src/JoltPhysicsSharp/runtimes/osx-universal/native/: README.md  libjoltc.dylib
src/JoltPhysicsSharp/runtimes/osx/native/: libjoltc.dylib
src/joltc/: CMakeLists.txt  ExternLog.cpp  ExternLog.hpp  int_to_hex.h  joltc.c  joltc.cpp  joltc.h  joltc_assert.cpp
src/joltc/Jolt/Core/: Core.h
src/joltc/Jolt/Math/: Math.h
src/samples/HelloWorld/: HelloWorld.csproj  Program.cs  Sample.cs
src/samples/HelloWorld/Samples/: AlternativeCollissionFilteringSample.cs  HelloWorld.cs
src/samples/HelloWorldNative/: CMakeLists.txt  main.cpp
src/tests/: BaseTest.cs  JoltColorTests.cs  JoltPhysicsSharp.Tests.csproj  ShapeTests.cs
tests/: BaseTest.cs  ConstraintsTests.cs  JoltPhysicsSharp.Tests.csproj  ShapeTests.cs  VehicleTests.cs
